deploy/k8s/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshopping
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m # product image uploads
spec:
  ingressClassName: nginx
  rules:
    - host: api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshopping-ocelotapigw
                port:
                  name: http
    - host: rabbitmq.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshopping-rabbitmq
                port:
                  name: http-management
    - host: kibana.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshopping-kibana
                port:
                  name: http
